Up to 1.2.1 (lots of little things) configure.sh: 1) Move the two freebsd-specific checks next to each other               2) Check for the setbuffer() function openfile.c:   1) Implement an overwrite flag and strip out the old "change                  slashes into _'s" code. ravel.1:      1) Document -c (write to current directory) and -f (overwrite                  files) ravel.c:      1) Wrap the showopt() call in die() with setbuffer()'s to                  buffer the output of the (not direly important) listing 	         of the available options. unravel.c:    1) Wrap the shopopt() call in die() with setbuffer()'s to 	         buffer the output of the (not direly important) listing 	         of the available options. 	      2) Add a die() function. 	      3) support -c and -f options. uudecode.1    1) Document -c (write to current directory) and -f (overwrite                  files.)

--- a/ravel.1
+++ b/ravel.1
@@ -21,7 +21,7 @@
 .Op Fl t Ar recipient
 .Ar file(s)
 .Nm unravel
-.Op Fl 7hvaV
+.Op Fl 7cfhvaV
 .Op Fl p Ar prefix
 .Op Ar file
 .Sh DESCRIPTION
@@ -52,6 +52,10 @@ encoding, and for binary files the base64 encoding.
 breaks apart
 .Ar files
 (or by default, the standard input) into their original form.
+Unless the
+.Fl f
+option is given, it will not write over existing files, but will
+create and write to a new file.
 Additionally, 
 .Nm unravel
 is able to decode 
@@ -99,6 +103,10 @@ filename specified.   If the
 .Fl p
 option was not specified, unnamed attachments will be written to the file(s)
 .Ar part. Ns seq .
+.It Fl c
+Extract attachments to the current directory.
+.It Fl f
+Replace existing files.
 .It Fl h
 Print a help message describing what command-line options are available,
 then exit.
@@ -107,11 +115,12 @@ Print debugging and progress messages.
 .It Fl V
 Print what version this is, then exit.
 .It Fl p Ar prefix
-Write unnamed mime-fragments to
+Write unnamed attachments to
 .Ar prefix Ns .seq
 .El
 .Sh SEE ALSO
-.Xr uuencode 5 ,
-.Xr uudecode 1
+.Xr uudecode 1 ,
+.Xr uuencode 1 ,
+.Xr uuencode 5 .
 .Sh AUTHOR
 David Parsons (orc@pell.chi.il.us)
