--- a/ravel.1
+++ b/ravel.1
@@ -136,4 +136,4 @@ Write unnamed attachments to
 .Xr uuencode 1 ,
 .Xr uuencode 5 .
 .Sh AUTHOR
-David Parsons (orc@pell.chi.il.us)
+David Parsons (orc@pell.portland.or.us)
